added 2nd slider section

--- a/index.html
+++ b/index.html
@@ -556,9 +556,44 @@
         </section>
         <!-- End Service Tab -->
 
+        <!-- 2nd Slider Section -->
         <section class="grey-section">
-
+            <div class="small-wrapper text-center">
+                <!-- Slider Heading -->
+                <h2 class="darkblue-txt">Development teams love DigitalOcean</h2>
+                <!-- Slider -->
+                <div class="slider">
+                    <a href="#"><i class="fas fa-chevron-left grey-txt"></i></a>
+                    <div class="rockerbox text-center">
+                        <img src="img/rockerbox-logo.png" alt="rockerbox-logo">
+                        <q class="grey-txt font-size-20">
+                            We have been able to make scaling the technical infrastructure of our
+                            business cost effective and efficient.
+                        </q>
+                        <br>
+                        <div class="quote-author">
+                            <span><strong>Rick O'Toole</strong></span> <br>
+                            <span>Co-founder and CTO</span>
+                        </div>
+                        <a href="#">Read story ></a>
+                    </div>
+                    <a href="#"><i class="fas fa-chevron-right darkblue-txt"></i></a>
+                </div>
+                <!-- Circle List -->
+                <ul class="circle-list">
+                    <li>
+                        <a href="#" class="blue-circle"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="empty-circle"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="empty-circle"></a>
+                    </li>
+                </ul>
+            </div>
         </section>
+        <!-- End 2nd Slider Section -->
     </main>
     <!-- END MAIN -->
 
