added get started now section

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 <!-- Slider -->
                 <div class="slider">
                     <a href="#"><i class="fas fa-chevron-left grey-txt"></i></a>
-                    <div class="rockerbox text-center">
+                    <div class="rockerbox">
                         <img src="img/rockerbox-logo.png" alt="rockerbox-logo">
                         <q class="grey-txt font-size-20">
                             We have been able to make scaling the technical infrastructure of our
@@ -594,6 +594,17 @@
             </div>
         </section>
         <!-- End 2nd Slider Section -->
+
+        <!-- Get Started Section -->
+        <section class="blue-section">
+            <div class="small-wrapper text-center">
+                <!-- Get Started Now -->
+                <h2 class="white-txt text-center">Get started now.</h2>
+                <!-- Create Account Button -->
+                <a href="#" class="btn btn-default blue-txt">Create your account</a>
+            </div>
+        </section>
+        <!-- End Get Started Section -->
     </main>
     <!-- END MAIN -->
 
