added footer and fixed sharky

--- a/index.html
+++ b/index.html
@@ -610,7 +610,184 @@
 
     <!-- FOOTER -->
     <footer>
+        <section class="darkblue-section">
+            <div class="wrapper">
+                <div class="container-fluid">
+                    <div class="row">
+                        <!-- Left Column -->
+                        <div class="col-xs-12 col-md-4">
+                            <img src="img/logo-small.svg" alt="logo-small">
+                            <span class="grey-txt">&#169; 2018 DigitalOcean, LLC. All rights reserved.</span> <br>
+                            <span class="grey-txt">Proudly made in NY</span>
+                            <ul class="socialmedias">
+                                <li>
+                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                </li>
+    
+                                <li>
+                                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fab fa-youtube"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                                </li>
+                            </ul>
+                        </div>
 
+                        <!-- Right Column -->
+                        <div class="col-xs-12 col-md-8">
+                            <div class="row">
+                                <!-- Company -->
+                                <div class="col-xs-12 col-sm-6 col-md-3">
+                                    <h4 class="white-txt">Company</h4>
+                                    <ul class="company">
+                                        <li>
+                                            <a href="#">About</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Leadership</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Link</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Blog</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Careers</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Partner Network</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Refferal Program</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Events</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Press</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Legal & Security</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <!-- Products -->
+                                <div class="col-xs-12 col-sm-6 col-md-3">
+                                    <h4 class="white-txt">Products</h4>
+                                    <ul class="company">
+                                        <li>
+                                            <a href="#">Droplets</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Spaces</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Kubernetes</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Load Balancers</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Block Storage</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Tools & Integration</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">One-Click Apps</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Api</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Pricing</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Documentation</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Release Notes</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <!-- Community -->
+                                <div class="col-xs-12 col-sm-6 col-md-3">
+                                    <h4 class="white-txt">Community</h4>
+                                    <ul class="company">
+                                        <li>
+                                            <a href="#">Tutorials</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Meetups</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Q&A</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Write for Donations</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Droplets for Demos</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Hatch</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Shop Swag</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Research Program</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Currents Research</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Open Source</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <!-- Support -->
+                                <div class="col-xs-12 col-sm-6 col-md-3">
+                                    <h4 class="white-txt">Support</h4>
+                                    <ul class="company">
+                                        <li>
+                                            <a href="#">Contact Support</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">FAQ</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Network Status</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="notify-menu">
+            <div class="shark-menu">
+                <span class="notify-bubble">Can I help answer any questions you have <br> about Digital Ocean?</span>
+                &nbsp;
+                <div class="shark">
+                    <div class="white-circle">
+                        <div class="red-circle">
+                            <span class="notification-number">2</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- END FOOTER -->
 </body>
