Added minor comments, project end

--- a/index.html
+++ b/index.html
@@ -610,6 +610,7 @@
 
     <!-- FOOTER -->
     <footer>
+        <!-- Footer Info -->
         <section class="darkblue-section">
             <div class="wrapper">
                 <div class="container-fluid">
@@ -774,7 +775,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- Shark Menu -->
         <div class="notify-menu">
             <div class="shark-menu">
                 <span class="notify-bubble">Can I help answer any questions you have <br> about Digital Ocean?</span>
